--- a/instrumentation/opentelemetry-instrumentation-dbapi/pyproject.toml
+++ b/instrumentation/opentelemetry-instrumentation-dbapi/pyproject.toml
@@ -25,8 +25,8 @@ classifiers = [
 ]
 dependencies = [
   "opentelemetry-api ~= 1.12",
-  "opentelemetry-instrumentation == 0.46b0.dev",
-  "opentelemetry-semantic-conventions == 0.46b0.dev",
+  "opentelemetry-instrumentation == 0.45b0.dev",
+  "opentelemetry-semantic-conventions == 0.45b0.dev",
   "wrapt >= 1.0.0, < 2.0.0",
 ]
 
@@ -40,10 +40,7 @@ Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/
 path = "src/opentelemetry/instrumentation/dbapi/version.py"
 
 [tool.hatch.build.targets.sdist]
-include = [
-  "/src",
-  "/tests",
-]
+include = ["/src", "/tests"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/opentelemetry"]
