--- a/instrumentation/opentelemetry-instrumentation-dbapi/pyproject.toml
+++ b/instrumentation/opentelemetry-instrumentation-dbapi/pyproject.toml
@@ -25,8 +25,8 @@ classifiers = [
 ]
 dependencies = [
   "opentelemetry-api ~= 1.12",
-  "opentelemetry-instrumentation == 0.45b0.dev",
-  "opentelemetry-semantic-conventions == 0.45b0.dev",
+  "opentelemetry-instrumentation == 0.45b0",
+  "opentelemetry-semantic-conventions == 0.45b0",
   "wrapt >= 1.0.0, < 2.0.0",
 ]
 
